# project_starforged

./: Cargo.toml  README.md  build.bat  random.lua  test.bat
client/: gamedisplay.rs  lib.rs
client/global/: event_handler.rs  globalstate.rs  inputservice.rs  mod.rs
client/loaders/: mod.rs  texture_loader.rs
client/network/: clinet.rs  mod.rs
client/renderer/: gamerenderer.rs  gamewindow.rs  mod.rs  renderctx.rs  surfacevertex.rs  vertex.rs
client/renderer/pipelines/: mod.rs  surface_pipeline.rs
client/view/: camera.rs
client/world/: binarymesher.rs  chunkdraw.rs  chunkmanager.rs  depthsort.rs  fastmesher.rs  mesher.rs  meshthread.rs  mod.rs
res/data/: biome_data.json  texture_manifest.json
res/shaders/: blit.wgsl  surfaceshader.wgsl
server/: lib.rs
server/network/: mod.rs  server_event_handler.rs  servernet.rs
server/world/: mod.rs  serverchunkmanager.rs
shared/: lib.rs
shared/loaders/: texture.rs  texture_loader.rs
shared/network/: containers.rs
shared/world/: biomemap.rs  block.rs  blockrepr.rs  butils.rs  chunk.rs  chunkcompress.rs  constructblock.rs  mod.rs  voxeloctree.rs  worldgen.rs
shared/world/blocks/: air_block.rs  grass_block.rs  mod.rs
