[package]
name = "project-starforged"
version = "0.1.0"
edition = "2021"

[lib]
name = "shared"
path = "shared/lib.rs"

[[bin]]
name = "server"
path = "server/lib.rs"

[[bin]]
name = "client"
path = "client/lib.rs"

[dependencies]
bytemuck = {version = "1.18.0", features = ["derive"]}
cached = "0.53.1"
image = "0.25.4"
instant = "0.1.13"
nalgebra = "0.33.0"
noise = "0.9.0"
once_cell = "1.20.2"
pollster = "0.3.0"
serde = {version = "1.0.213", features=["derive"]}
serde_json = "1.0.132"
splines = "4.3.1"
stopwatch = "0.0.7"
tokio = "1.41.0"
wgpu = "22.1.0"
winit = "0.30.5"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
copy_to_output = "2.2.0"