[package]
name = "project-starforged"
version = "0.1.0"
edition = "2021"

[lib]
name = "shared"
path = "shared/lib.rs"

[[bin]]
name = "server"
path = "server/lib.rs"

[[bin]]
name = "client"
path = "client/lib.rs"

[dependencies]
bincode = "1.3.3"
bytemuck = {version = "1.18.0", features = ["derive"]}
cached = "0.53.1"
flate2 = "1.0.35"
image = "0.25.4"
instant = "0.1.13"
message-io = "0.18.2"
miniz_oxide = "0.8.0"
nalgebra = {version = "0.33.0", features = ["serde-serialize"]}
noise = "0.9.0"
once_cell = "1.20.2"
pollster = "0.3.0"
serde = {version = "1.0.213", features=["derive", "rc"]}
serde_json = "1.0.132"
splines = "4.3.1"
stopwatch = "0.0.7"
strum_macros = "0.26.4"
tokio = "1.41.0"
typetag = "0.2.18"
wgpu = "22.1.0"
winit = "0.30.5"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
copy_to_output = "2.2.0"
